--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.5.0",
+    "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "styled-components": "^4.4.1"
