--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/history": "^4.7.3",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
@@ -49,11 +50,13 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "history": "^4.10.1",
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.5.0",
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "url-pattern": "^1.0.3"
   }
 }
