--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-transition-group": "^4.2.3",
     "@types/styled-components": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
@@ -56,6 +57,7 @@
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^4.4.1",
     "url-pattern": "^1.0.3"
   }
