--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client:build": "cross-env NODE_ENV=production webpack",
     "server:build": "tsc -p tsconfig.server.json",
     "build": "rimraf build && yarn client:build && yarn server:build",
-    "production": "cross-env NODE_ENV=production node ./build/server.js",
+    "production": "cross-env NODE_ENV=production node ./build/server/server.js",
     "lint": "eslint --ext .ts,.tsx src/"
   },
   "devDependencies": {
@@ -24,6 +24,10 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/history": "^4.7.3",
+    "@types/koa": "^2.11.0",
+    "@types/koa-conditional-get": "^2.0.0",
+    "@types/koa-router": "^7.0.42",
+    "@types/koa-static": "^4.0.1",
     "@types/node": "^12.12.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
@@ -36,6 +40,7 @@
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^3.1.4",
+    "cross-env": "^6.0.3",
     "eslint": "^6.1.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-react": "^7.14.3",
@@ -52,6 +57,11 @@
   },
   "dependencies": {
     "history": "^4.10.1",
+    "isbot": "^2.5.3",
+    "koa": "^2.11.0",
+    "koa-conditional-get": "^2.0.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.5.0",
     "polished": "^3.4.2",
